# ring-buffer

./: .clang-tidy  .clangd  CMakeLists.txt  README.md  makefiles.sh
lib/: ringbuffer.h
src/: main.cpp
